SFDEV/force-app/main/default/objects/Mathaobjectone__c/Mathaobjectone__c.object-meta.xml
<CustomObject>
    <label>Matha</label>
    <nameField>
        <label>Matha Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mathas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>