SFDEV/force-app/main/default/objects/Mathaobjectone__c/fields/account_type__c.field-meta.xml
<CustomField>
    <fullName>account_type__c</fullName>
    <label>account type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saving</fullName>
            </value>
            <value>
                <fullName>salary</fullName>
            </value>
            <value>
                <fullName>current</fullName>
            </value>
            <value>
                <fullName>joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>