SFDEV/force-app/main/default/objects/Mathaobjectone__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ind</fullName>
            </value>
            <value>
                <fullName>Pak</fullName>
            </value>
            <value>
                <fullName>srilanka</fullName>
            </value>
            <value>
                <fullName>ussa</fullName>
            </value>
            <value>
                <fullName>aus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>